--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "me.tatarka.retrolambda" version "3.2.2"
+}
+
 allprojects {
     repositories {
         jcenter()
