--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.rothanak.gradeskinda"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.rothanak.gradeskinda"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".GradesApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,7 +14,6 @@
             android:label="@string/title_activity_dashboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
