--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -31,6 +32,11 @@ dependencies {
     // Java 8 lambdas
     retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.0.6'
 
+    // Dependency Injection
+    compile 'com.google.dagger:dagger:2.0.1'
+    apt "com.google.dagger:dagger-compiler:2.0.1"
+    compile 'org.glassfish:javax.annotation:10.0-b28'
+
     // Logging
     compile 'com.jakewharton.timber:timber:3.1.0'
 
@@ -40,6 +46,7 @@ dependencies {
     testCompile('com.squareup.assertj:assertj-android:1.1.0') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
+    testCompile 'org.mockito:mockito-core:2.0.31-beta'
     testCompile('org.robolectric:robolectric:3.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
