--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:2.2.0'
     testCompile 'com.squareup.assertj:assertj-android:1.1.0'
+    testCompile 'nl.jqno.equalsverifier:equalsverifier:1.7.5'
     testCompile 'org.mockito:mockito-core:2.0.31-beta'
     testCompile('org.robolectric:robolectric:3.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
