--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
 
     // Unit testing
     testCompile 'junit:junit:4.12'
+    testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.12.1'
     testCompile 'org.assertj:assertj-core:2.2.0'
     testCompile 'com.squareup.assertj:assertj-android:1.1.0'
     testCompile 'nl.jqno.equalsverifier:equalsverifier:1.7.5'
