--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,7 @@ org.gradle.parallel=true
 # Only relevant projects are configured which results in faster builds for large multi-projects.
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:configuration_on_demand
 org.gradle.configureondemand=true
+
+# Permits files and folders beginning with an underscore to be retained in the assets directory.
+# Necessary because Wiremock uses "__files" to hold server body files.
+systemProp.ANDROID_AAPT_IGNORE=!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~
